# banking-transaction-analyzer

./: .coverage  .env.example  .gitignore  README.md  main.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_external_api_py.html  z_145eef247bfb46b6_read_xlsx_py.html  z_145eef247bfb46b6_reports_decorator_py.html  z_145eef247bfb46b6_reports_py.html  z_145eef247bfb46b6_services_py.html  z_145eef247bfb46b6_utils_py.html  z_145eef247bfb46b6_views_py.html
src/: external_api.py  logging_config.py  read_xlsx.py  reports.py  reports_decorator.py  services.py  utils.py  views.py
tests/: conftest.py  test_external_api.py  test_read_xlsx.py  test_reports.py  test_reports_decorator.py  test_services.py  tests_utils.py
