[project]
name = "banking-transaction-analyzer"
version = "0.1.0"
description = ""
authors = [
    {name = "Nadezhda_Popova",email = "nadezhdapopova13@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
